css/Watch.css
/* .watch-content-container .third-700 {
    padding-bottom: 120px;
} */

@media only screen and (min-width:700px) {
    .watch-content-container .third-700 {
        height: 100%;
    }
}

.watch-content-container .third-700 > *:not(.episode-info-container) {
    margin-bottom: .6em;
}

.two-third-700 > .episode-info-container {
    padding: 0 0.3em;
}

.episode-info-card {
    height: 248px;
    margin-bottom: 0;
}

.episode-info-card header {
    justify-content: space-between;
}

.episode-info-card section .episode-number {
    margin: 0 0 0 5.5px;
    position: absolute;
    background-color: rgba(0, 0, 0, 0.5);
    color: #ffffff;
    padding: 0 3px;
    line-height: 1.1;
}

.episode-info-card header, .episode-info-card header > div {
    display: flex;
}

.episode-info-card header > span {
    padding-left: 4px;
}

.episode-info-card header > span > * {
    margin: 0;
}

.episode-info-card header > div > * {
    padding: 0 12px;
    margin-right: -6px;
    cursor: pointer;
}

.episode-info-card h4 {
    color: #ffffff;
}

.episode-info-card p, .episode-info-card h4 {
    margin-top: -6px;
    padding: 0 0 4px 0;
}

.episode-info-card section > img {
    float: left;
    margin-right: .3em;
    padding-bottom: 0;
    max-width: 50%;
    max-height: 132px;
}

.episode-info-card section > div {
    margin-top: -6px;
}

.episode-info-card section > div {
    line-height: 1.4;
}

.episode-info-card .subtitle {
    display: block;
}

.modal.source-select-modal article {
    background-color: #212121;
    max-width: 90%;
}

.modal.source-select-modal section .flex p {
    margin-top: -6px;
}

.modal.source-select-modal section h5 {
    padding-left: 5px;
    color: #ffffff;
}

.modal header .key-note {
    display: flex;
    font-size: 14px;
}

.modal header .key-note > div {
    width: 20px;
    height: 20px;
    margin-right: 4px;
    border: 1.5px solid #000000;
}

.modal header .key-note > div.uncensored {
    background-color: #e70000;
}

.modal header .key-note > div.fan {
    background-color: #670090;
}

.watch-content-container .info-watch-later, .watch-content-container .info-favorite, .watch-content-container .icon-info-circled {
    transition: color 1s;
}

.info-watch-later.active {
    color: #4caf50;
}

.info-favorite.active {
    color: #f44336;
}

.icon-info-circled.active {
    color: #ff9900;
}

.show-more {
    height: 40px;
    padding-top: 5px;
    text-align: center;
    text-transform: uppercase;
    cursor: pointer;
}

.show-more:active {
    box-shadow: inset 0 0 0 99em rgba(17,17,17,0.2);
}

.season-list-button {
    text-align: left;
    padding-top: 10px;
    padding-bottom: 10px;
    margin: 0;
}

.season-list-button i {
    padding-right: 0.5em;
}

.episode-list .tabs .toggle {
    color: #ffffff;
}

.episode-list .number, .episode-list .language {
    white-space: nowrap;
}

.episode-list .table-selectable tr {
    height: 68px;
}

.table-container {
    overflow-x: scroll;
}

.table-selectable {
    cursor: pointer;
    color: #ffffff;
    font-size: 16px;
    background-color: #424242;
}

.table-selectable td {
    padding-right: 0.6em;
}

.table-selectable tr.selected, .table-selectable tr:hover {
    background-color: #000000;
}

.list-header {
    padding: 0 0 10px 0;
    line-height: 0;
}

.list-header span {
    margin: 0;
}

.source-select-options-container {
    display: flex;
    flex-flow: wrap;
    justify-content: space-around;
}

.source-select-options {
    background-color: #424242;
    width: 80px;
    max-width: 80px;
    height: 80px;
    line-height: 70px;
    margin-bottom: 0.3em;
    font-size: 2em;
    font-weight: 600;
    text-align: center;
    text-transform: capitalize;
    cursor: pointer;
}

.source-select-options:hover {
    border: 1.5px solid;
}

.source-select-options.uncensored {
    background-color: #e70000;
    color: #ff7f50;
}

.source-select-options.fan {
    background-color: #670090;
    color: #d876ff;
}

.source-select-options.subs {
    color: #ff7f50;
}

.source-select-options.dubs {
    color: #d876ff;
}

.source-language {
    font-size: 12px;
    line-height: 0;
}

.theater-body {
    overflow: hidden;
}

.theater-toggle {
    display: none;
}

.watch-body.theater-body .video-js.vjs-fullscreen, .video-js.vjs-fullscreen .vjs-tech{
    width:100%!important;
    height:100%!important
}

.watch-body.theater-body .content-wrapper-container {
    position: absolute;
}

@media only screen and (min-width:700px) {
    .watch-body.theater-body .video-js {
        height: calc(100vh - 50px);
        padding: 0;
    }

    .watch-body.theater-body .watch-content-container .third-700 {
        overflow-y: scroll;
        height: 100vh;
    }

    .watch-body.theater-body .content-wrapper {
        padding-left: 0;
    }

    .theater-toggle {
        display: block;
    }
}

@media only screen and (min-width: 1000px) {
    .watch-body:not(.theater-body) .content-wrapper {
        width: auto;
    }
}

/* .season-list-container {
    -ms-overflow-style: none;
}

@media only screen and (min-width: 999px) and (max-width: 1444px) {
    .season-list-container {
        right: -2px;
        overflow-y: scroll;
        position: fixed;
        padding-bottom: 100px;
    }
} */

